--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-web": "~0.13.12",
     "lodash": "4.17.21",
+    "react-is": "^16.8.0",
     "expo-constants": "~10.1.3",
+    "styled-components": "5.3.0",
     "react-native-paper": "3.6.0"
   },
   "devDependencies": {
